--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ target/
 *.iml
 *.ipr
 
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -31,3 +32,5 @@ build/
 
 ### VS Code ###
 .vscode/
+
+/src/main/resources/application.yml
